Revision history for Perl extension Text::Balanced::Marpa.

1.02  Wed Dec 31 11:10:00 2014
	- Change the default value for text() from '' to \''.
	- Add the length() and pos() mutators, to allow the user to control the call to the recognizer's
		read() method. See the FAQ.
	- Add the exhaustion_is_fatal option. See error_number() == 6 for details.
	- When the parse is successful, error_message() now returns 'OK'. It used to return ''.

1.01  Mon Dec 29 08:41:00 2014
	- Stop including the string 'Error: ' twice in error messages.
	- Stop the option print_warnings from printing the tree. Leave that to the caller.
	- Change docs to match.
	- Change scripts/*.pl and t/*.t to match.
	- Change the output of tree2string() where there was an extra vertical dash at the start of the
		last line in some cases (which the original code in Tree::DAG_Node did not print).
	- Clean up the docs.
	- Rename t/parenthises.t to t/parentheses.t.

1.00  Wed Dec 24 09:52:00 2014
	  - Original version