@@ -41,7 +41,7 @@ for my $text (@text)
 
 	$result = $parser -> parse(\$text);
 
-	ok($result == 0, "Parsed $text");
+	ok($result == 0, "Parsed: $text");
 
 	#diag join("\n", @{$parser -> tree2string});
 }
