@@ -6,6 +6,8 @@ Revision history for Perl extension Text::Balanced::Marpa.
 		read() method. See the FAQ.
 	- Add the exhaustion_is_fatal option. See error_number() == 6 for details.
 	- When the parse is successful, error_message() now returns 'OK'. It used to return ''.
+	- Add t/skip.prefix.t to demonstrate pos() and length().
+	- Add scripts/tiny.pl for quick tests without Test::More.
 
 1.01  Mon Dec 29 08:41:00 2014
 	- Stop including the string 'Error: ' twice in error messages.
